--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@iconify/icons-carbon": "^1.1.7",
+    "@iconify/react": "^3.1.3",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.62",
